--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,13 @@
 :root {
     /* Color variables */
     --primary-color: #4a6fa5;
+    --primary-dark: #3a5a80;
     --secondary-color: #e67e22;
+    --secondary-dark: #d35400;
     --dark-color: #2c3e50;
     --light-color: #ecf0f1;
     --success-color: #27ae60;
+    --success-dark: #229954;
     --warning-color: #f39c12;
     --danger-color: #e74c3c;
     --text-color: #333;
